--- a/app/assets/stylesheets/ltr.css.scss
+++ b/app/assets/stylesheets/ltr.css.scss
@@ -6,6 +6,12 @@ html body {
   text-align: left;
 }
 
+/* Rules for the left sidebar */
+
+#left {
+  border-right: 1px solid #ccc;
+}
+
 /* Rules for the menu displayed in the left sidebar */
 
 .left_menu {
@@ -59,7 +65,8 @@ html body {
 /* Rules for tabbed navigation bar */
 
 #top-bar {
-  margin-left: 185px;
+  left: 185px;
+  right: 0;
 }
 
 #tabnav a,
@@ -82,12 +89,6 @@ html body {
   left: 15px
 }
 
-/* Rules for OpenLayers maps */
-
-#map {
-  border-left: 1px solid #ccc;
-}
-
 /* Rules for attribution text under the main map shown on printouts */
 
 .attribution_license {
@@ -102,7 +103,7 @@ html body {
 
 #sidebar {
   left: 0px;
-  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
 }
 
 #sidebar #sidebar_title {
@@ -116,9 +117,8 @@ html body {
 /* Rules for the main content area */
 
 #content {
+  margin-left: 185px;
   border-left: 1px solid #ccc;
-  left: 185px;
-  right: 0px;
   text-align: left;
 }
 
