--- a/app/assets/stylesheets/rtl.css.scss
+++ b/app/assets/stylesheets/rtl.css.scss
@@ -6,6 +6,12 @@ html body {
   text-align: right;
 }
 
+/* Rules for the left sidebar */
+
+#left {
+  border-left: 1px solid #ccc;
+}
+
 /* Rules for the menu displayed in the left sidebar */
 
 .left_menu {
@@ -31,7 +37,7 @@ html body {
 
 /*
  * Rules for "optional boxes" which appear in the left sidebar on
- * certain pages. Current users are the seach box on the main page
+ * certain pages. Current users are the search box on the main page
  * and the tag cloud on the traces pages.
  */
 
@@ -59,7 +65,8 @@ html body {
 /* Rules for tabbed navigation bar */
 
 #top-bar {
-  margin-right: 185px
+  right: 185px;
+  left: 0;
 }
 
 #tabnav a,
@@ -82,12 +89,6 @@ html body {
   right: 15px
 }
 
-/* Rules for OpenLayers maps */
-
-#map {
-  border-right: 1px solid #ccc;
-}
-
 /* Rules for attribution text under the main map shown on printouts */
 
 .attribution_license {
@@ -102,7 +103,7 @@ html body {
 
 #sidebar {
   right: 0px;
-  border-right: 1px solid #ccc;
+  border-left: 1px solid #ccc;
 }
 
 #sidebar #sidebar_title {
@@ -117,8 +118,7 @@ html body {
 
 #content {
   border-right: 1px solid #ccc;
-  right: 185px;
-  left: 0px;
+  margin-right: 185px;
   text-align: right;
 }
 
