--- a/app/assets/stylesheets/small-rtl.css
+++ b/app/assets/stylesheets/small-rtl.css
@@ -3,3 +3,21 @@
  *= require rtl
  *= require small
  */
+
+/* Rules for tabbed navigation bar */
+
+#top-bar {
+  right: 0;
+}
+
+/* Rules for the site name - shown when left sidebar is hidden */
+
+#small-title {
+  right: 5px;
+}
+
+/* Rules for greeting bar in the top right corner */
+
+#greeting {
+  left: 5px;
+}
